fix: corrected chat interface overflow to see the chats

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,8 +44,9 @@
 }
 
 body {
-  background-image: url('../../public/villagebg.png');
+  background-image: url('../../public/jain bg.jpeg');
   background-repeat: no-repeat;
+  background-size: contain;
   background-size: cover; /* Make the image cover the entire container */
   background-position: center; /* Position the image at the center */
   background-attachment: fixed;
